Fixed scatter plot view to work on IE7

--- a/exhibit/branches/2.0/src/webapp/api/themes/classic/bundle.css
+++ b/exhibit/branches/2.0/src/webapp/api/themes/classic/bundle.css
@@ -469,6 +469,12 @@ div.exhibit-scatterPlotView-yAxis {
     top:        0px;
     bottom:     2em;
 }
+div.exhibit-scatterPlotView-yAxis-ie {
+    position:       absolute; 
+    height:         100%;
+    padding-bottom: 2em;
+    width:          5em;
+}
 div.exhibit-scatterPlotView-yAxisLabel {
     font-family:    sans-serif;
     font-size:      80%;
@@ -490,6 +496,7 @@ div.exhibit-scatterPlotView-yAxisName {
 div.exhibit-scatterPlotView-gridLine {
     position:   absolute; 
     background: white;
+    overflow:   hidden;
 }
 div.exhibit-scatterPlotView-canvasFrame {
     position:       absolute;
@@ -498,6 +505,14 @@ div.exhibit-scatterPlotView-canvasFrame {
     top:            1em;
     bottom:         2em;
 }
+div.exhibit-scatterPlotView-canvasFrame-ie {
+    position:       absolute;
+    height:         100%;
+    padding-bottom: 2em;
+    padding-left:   5em;
+    padding-top:    1em;
+}
+
 div.exhibit-scatterPlotView-canvas {
     position:   relative; 
     background: #ddd;
@@ -505,6 +520,7 @@ div.exhibit-scatterPlotView-canvas {
 div.exhibit-scatterPlotView-point {
     position:   absolute;
     cursor:     pointer;
+    overflow:   hidden;
 }
 
 div.exhibit-scatterPlotView-resizer {
